...
                          ]
                          : null,
                ),
                child: ElevatedButton(
                  key:
                      currentStep == 2
                          ? const ValueKey('save_card_button')
                          : const ValueKey('next_button'),
                  onPressed:
                      canProceed ? (currentStep == 2 ? onSave : onNext) : null,
                  style: ElevatedButton.styleFrom(
                    backgroundColor: Colors.transparent,
                    shadowColor: Colors.transparent,
                    shape: RoundedRectangleBorder(
...
