...
                          ),
                        ),
                      );
                    } else if (index == gridCards.length) {
                      // Generic card option
                      return GestureDetector(
                        key: const ValueKey('generic_card_option'),
                        onTap: () => onGenericSelected(true),
                        child: Container(
                          decoration: BoxDecoration(
                            color:
                                isGenericSelected
                                    ? colorScheme.primaryContainer
...
